--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,19 @@ nav {
         display: none;
     }
 }
+.menu.active {
+    display: block;
+}
+
+.menu-icon.active span:nth-child(1) {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.menu-icon.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.menu-icon.active span:nth-child(3) {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
